# categorical_encoding

./: .gitignore  Categorical_Encoding_Report.md  Makefile  README.md  categorical-encoding-guide.ipynb  contributing.md  dev-requirements.txt  encode_features.ipynb  encode_features.py  encoder.ipynb  encoder.py  release.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.circleci/: config.yml
.github/: main.workflow
.github/ISSUE_TEMPLATE/: new-method-idea.md
.github/workflows/: release.yml  tests.yml
categorical-encoding/: Makefile  README.md  release.md  setup.cfg  setup.py
categorical-encoding/docs/: requirements.txt
categorical-encoding/docs/source/: api_reference.rst  conf.py  index.rst  install.rst
categorical-encoding/release/: Dockerfile
categorical_encoding/: __init__.py  binary_enc.py  encoder.ipynb  encoder.py  hashing_enc.py  ordinal_enc.py
categorical_encoding/encoders/: __init__.py  encoder.py
categorical_encoding/primitives/: __init__.py  binary_enc.py  hashing_enc.py  leave_one_out_enc.py  one_hot_enc.py  ordinal_enc.py  target_enc.py
categorical_encoding/tests/: test_enc_primitives.py  test_encoding.py  testing_utils.py
docs/: requirements.txt
docs/source/: api_reference.rst  changelog.rst  conf.py  index.rst  install.rst  release_notes.rst
flowchart/: Categorical Encoding Flowchart.drawio
guides/notebooks/: utils.py  (+10 more)
notebooks/: categorical-encoding-demo-2.ipynb  categorical-encoding-demo.ipynb  categorical-encoding-guide.ipynb  categorical-encoding-notes.ipynb  utils.py  utils2.py
release/: Dockerfile
(+7 files in other folders)
