[tool:pytest]
python_files = categorical_encoding/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
[flake8]
exclude = docs/*
ignore = E501,W504
[metadata]
description-file = README.md
[aliases]
test=pytest
[isort]
forced_separate=categorical_encoding
multi_line_output=3
